[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jorge Alexander Fajardo <joralex0826@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
requires-python = ">=3.10,<3.13"

dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "polars (>=1.24.0,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (<2.2.0)",
    "confluent-kafka (>=2.8.2,<3.0.0)",
    "hopsworks (>=4.1.8,<5.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
